--- a/main.ipynb
+++ b/main.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -259,13 +259,13 @@
        "4  CONSTITUCION       1  Calvo, Carlos    1655       0  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_arbolado = pd.read_csv(\"./datos/arbolado-publico-lineal-2011.csv\")\n",
+    "data_arbolado = pd.read_csv(\"./datos/arbolado-publico-lineal.csv\")\n",
     "print(f\"El dataset tiene {data_arbolado.shape[0]} filas y {data_arbolado.shape[1]} columnas.\")\n",
     "duplicados = len(data_arbolado) - len(data_arbolado.drop_duplicates())\n",
     "print(f\"Duplicados: {duplicados}\")\n",
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "4  Árbol Latifoliado Caducifolio  Exótico  CONSTITUCION       1  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,9 +432,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 218,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 372699 entries, 0 to 372698\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column        Non-Null Count   Dtype \n",
+      "---  ------        --------------   ----- \n",
+      " 0   altura        372699 non-null  int64 \n",
+      " 1   diametro      372699 non-null  int64 \n",
+      " 2   inclinacion   372699 non-null  int64 \n",
+      " 3   nombre_fam    372699 non-null  object\n",
+      " 4   nombre_gen    372699 non-null  object\n",
+      " 5   nombre_com    372694 non-null  object\n",
+      " 6   tipo_follaje  372699 non-null  object\n",
+      " 7   origen        372699 non-null  object\n",
+      " 8   barrio        372699 non-null  object\n",
+      " 9   comuna        372699 non-null  int64 \n",
+      "dtypes: int64(4), object(6)\n",
+      "memory usage: 28.4+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "data_arbolado.info()"
    ]
@@ -449,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -523,56 +547,56 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>372620.00000</td>\n",
-       "      <td>372620.000000</td>\n",
-       "      <td>372620.000000</td>\n",
-       "      <td>372620.000000</td>\n",
+       "      <td>372699.000000</td>\n",
+       "      <td>372699.000000</td>\n",
+       "      <td>372699.000000</td>\n",
+       "      <td>372699.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>8.47484</td>\n",
-       "      <td>31.948006</td>\n",
-       "      <td>3.070367</td>\n",
-       "      <td>9.125001</td>\n",
+       "      <td>8.473044</td>\n",
+       "      <td>31.941234</td>\n",
+       "      <td>3.069783</td>\n",
+       "      <td>9.124524</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>4.57564</td>\n",
-       "      <td>20.204005</td>\n",
-       "      <td>6.030279</td>\n",
-       "      <td>3.866454</td>\n",
+       "      <td>4.576818</td>\n",
+       "      <td>20.207216</td>\n",
+       "      <td>6.029910</td>\n",
+       "      <td>3.866483</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>5.00000</td>\n",
+       "      <td>5.000000</td>\n",
        "      <td>17.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>6.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>8.00000</td>\n",
+       "      <td>8.000000</td>\n",
        "      <td>28.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>10.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>11.00000</td>\n",
+       "      <td>11.000000</td>\n",
        "      <td>43.000000</td>\n",
        "      <td>5.000000</td>\n",
        "      <td>12.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>60.00000</td>\n",
+       "      <td>60.000000</td>\n",
        "      <td>426.000000</td>\n",
        "      <td>60.000000</td>\n",
        "      <td>15.000000</td>\n",
@@ -582,18 +606,18 @@
        "</div>"
       ],
       "text/plain": [
-       "             altura       diametro    inclinacion         comuna\n",
-       "count  372620.00000  372620.000000  372620.000000  372620.000000\n",
-       "mean        8.47484      31.948006       3.070367       9.125001\n",
-       "std         4.57564      20.204005       6.030279       3.866454\n",
-       "min         0.00000       0.000000       0.000000       1.000000\n",
-       "25%         5.00000      17.000000       0.000000       6.000000\n",
-       "50%         8.00000      28.000000       0.000000      10.000000\n",
-       "75%        11.00000      43.000000       5.000000      12.000000\n",
-       "max        60.00000     426.000000      60.000000      15.000000"
+       "              altura       diametro    inclinacion         comuna\n",
+       "count  372699.000000  372699.000000  372699.000000  372699.000000\n",
+       "mean        8.473044      31.941234       3.069783       9.124524\n",
+       "std         4.576818      20.207216       6.029910       3.866483\n",
+       "min         0.000000       0.000000       0.000000       1.000000\n",
+       "25%         5.000000      17.000000       0.000000       6.000000\n",
+       "50%         8.000000      28.000000       0.000000      10.000000\n",
+       "75%        11.000000      43.000000       5.000000      12.000000\n",
+       "max        60.000000     426.000000      60.000000      15.000000"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +645,7 @@
        "<AxesSubplot: ylabel='altura'>"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -642,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +675,7 @@
        "<AxesSubplot: ylabel='diametro'>"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -680,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +932,7 @@
        "[79 rows x 10 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1203,7 @@
        "[372620 rows x 10 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1231,7 @@
        "<AxesSubplot: ylabel='altura'>"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1228,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1261,7 @@
        "<AxesSubplot: xlabel='altura', ylabel='Count'>"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1258,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1291,7 @@
        "<AxesSubplot: ylabel='diametro'>"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1288,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1321,7 @@
        "<AxesSubplot: xlabel='diametro', ylabel='Count'>"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1326,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -1722,7 +1746,7 @@
        "14            Dique 4         2"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1743,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -1777,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -1883,7 +1907,7 @@
        "[305 rows x 2 columns]"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1904,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -1945,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -1970,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
