Detalles de redacción

--- a/main.ipynb
+++ b/main.ipynb
@@ -947,9 +947,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aquí se observa que hay un error en el ingreso de los datos, ya que se trata de árboles sin identifiación de ningún tipo y con altura y diametro cero que es imposible.\n",
-    "\n",
-    "Al ver que se tratan de tan solo 79 instancias las eliminaré, ya que se trata de un error de ingreso de los datos."
+    "Aquí se observa que hay un error en el ingreso de los datos, ya que se trata de árboles sin identificación de ningún tipo y con altura y diametro cero que es imposible. Al ver que se tratan de tan solo 79 instancias las eliminaré."
    ]
   },
   {
@@ -2028,7 +2026,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
